# adminer-mcp

./: .gitignore  pyproject.toml
src/: main.py
src/adminer_mcp/: main.py
